realizando cambios de ultimo momento

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="myStyle.css">
+    <link rel="stylesheet" href="css/myStyle.css"/>
 </head>
 <body>
-   <p> ¡Hola mundo!</p>
-
+    <h1>¡Hola mundo!</h1>
+    <h2>¡Hola mundo!</h2>
+    <h3>¡Hola mundo!</h3>
+    <h4>¡Hola mundo!</h4>
+    <h5>¡Hola mundo!</h5>
+    <h6>¡Hola mundo!</h6>
 </body>
 </html>
