realizando cambios en el centrado

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/myStyle.css"/>
+    <meta name="author" content="Carlos Andres Alzate"/>
+    <meta name="keywords" content="Web Design, Frontend, html & css"/>
+    <meta name="description" content="Desarrollo y diseño web: como centrar en css ejercicios"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimun-scale=1.0,maximun-scale=1.0,user-scalable=no"/>
+    <title>Centrado | como centrar en css</title>
+    <link rel="stylesheet" href="css/myStyle.css" />
 </head>
+
 <body>
-    <h1>¡Hola mundo!</h1>
-    <h2>¡Hola mundo!</h2>
-    <h3>¡Hola mundo!</h3>
-    <h4>¡Hola mundo!</h4>
-    <h5>¡Hola mundo!</h5>
-    <h6>¡Hola mundo!</h6>
+    <div>
+        <h1>¡Hola mundo!</h1>
+        <h2>¡Hola mundo!</h2>
+        <h3>¡Hola mundo!</h3>
+        <h4>¡Hola mundo!</h4>
+        <h5>¡Hola mundo!</h5>
+        <h6>¡Hola mundo!</h6>
+    </div>
 </body>
+
 </html>
