definir valores y una breve explicacion

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Carlos Andres Alzate"/>
     <meta name="keywords" content="Web Design, Frontend, html & css"/>
     <meta name="description" content="Desarrollo y diseño web: como centrar en css ejercicios"/>
+    <meta name="viewport" content="width=device-width,user-scalable=no"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimun-scale=1.0,maximun-scale=1.0,user-scalable=no"/>
     <title>Centrado | como centrar en css</title>
     <link rel="stylesheet" href="css/myStyle.css" />
